fixed email whitespace

--- a/app/assets/stylesheets/email.sass
+++ b/app/assets/stylesheets/email.sass
@@ -43,5 +43,5 @@
     margin: 0
 
 .plain-text
-  white-space: pre !important
+  white-space: pre-wrap !important
   word-wrap: break-word !important
